--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.10",
+    "@types/leaflet": "^1.9.21",
+    "@types/react-plotly.js": "^2.6.3",
+    "leaflet": "^1.9.4",
+    "plotly.js-dist": "^3.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0"
   },
